# advent-of-code-2021

./: .gitignore  COPYING  README  run-all.zsh
1/: puzzle1.b98  puzzle1.py  puzzle2.b98  puzzle2.py
10/: puzzle1.cpp  puzzle2.cpp
11/: CMakeLists.txt  interactive.c  puzzle1.c  puzzle2.c
12/: Cargo.toml
12/src/: puzzle1.rs  puzzle2.rs
13/: CMakeLists.txt  puzzle1.cpp  puzzle2.cpp
14/: puzzle1.js  puzzle2.js
15/: CMakeLists.txt  puzzle1.c  puzzle2.c
16/: Cargo.toml
16/src/: puzzle1.rs  puzzle2.rs
17/: puzzle1.py  puzzle2.py
18/: CMakeLists.txt  puzzle1.cpp  puzzle2.cpp
19/: Cargo.toml
19/src/: puzzle1.rs  puzzle2.rs
2/: Cargo.toml  input
2/befunge/: puzzle1.b98  puzzle2.b98
2/src/: puzzle1.rs  puzzle2.rs
20/: puzzle1.py  puzzle2.py
21/: Cargo.toml
21/src/: puzzle1.rs  puzzle2.rs
22/: puzzle1.js  puzzle2.js
23/: CMakeLists.txt  puzzle1.cpp  puzzle2.cpp
3/: .gitignore  CMakeLists.txt  puzzle1.c  puzzle1b.c  puzzle2.c
4/: Cargo.toml
4/src/: puzzle1.rs  puzzle2.rs
5/: CMakeLists.txt  csv2png.py  map.csv  puzzle1.cpp  puzzle2.cpp
6/: puzzle1.js  puzzle2.js
7/: Cargo.toml
7/src/: puzzle1.rs  puzzle2.rs
8/: Cargo.toml
8/src/: puzzle1.rs  puzzle2.rs
9/: puzzle1.py  puzzle2.py  puzzle2_anim.py
fast-python/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  runall.py
