[package]
name = "day19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "puzzle1"
path = "src/puzzle1.rs"

[[bin]]
name = "puzzle2"
path = "src/puzzle2.rs"

[dependencies]
nalgebra = "0.29.0"
hashbrown = "0.11.2"
itertools = "0.10.3"
